--- a/app/assets/stylesheets/backbone/home/right.css.scss
+++ b/app/assets/stylesheets/backbone/home/right.css.scss
@@ -7,5 +7,7 @@
     display: block;
     margin-left: 20px;
     margin-top: 20px;
+    max-height: 940px;
+    overflow: scroll;
   }
 }
